--- a/public/assets/css/all.css
+++ b/public/assets/css/all.css
@@ -2,6 +2,22 @@
  * Font Awesome Free 5.8.1 by @fontawesome - https://fontawesome.com
  * License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License)
  */
+
+::placeholder{
+    font-style: italic;
+    color: #141517;
+    opacity: 0.5;
+}
+hr{
+    border: 0;
+    clear:both;
+    display:block;
+    width: 100%;
+    background-color:#FF0000;
+    height: 1px;
+}
+
+
 .fa,
 .fas,
 .far,
